fixed overflow-x

--- a/style/general.css
+++ b/style/general.css
@@ -1,6 +1,6 @@
-html,
 body {
   background-color: #eeeeee;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
 }
